# testrunner

./: .dockerignore  .gitignore  CHECKPOINT_00.md  CHECKPOINT_01.md  CHECKPOINT_02.md  CLAUDE.md  Dockerfile  HINTS.md.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt  testrunner.json.example
scripts/: e2e_test.py  test_repos.json
src/testrunner/: __init__.py  __main__.py  cli.py  config.py
src/testrunner/core/: __init__.py  discovery.py  executor.py  parser.py  runner.py
src/testrunner/git/: __init__.py  diff.py  history.py
src/testrunner/llm/: __init__.py  analysis.py  analyzer.py  base.py  ollama.py  openrouter.py  parser.py  prompts.py
src/testrunner/report/: __init__.py  generator.py
src/testrunner/report/templates/: base.html  report.html
src/testrunner/risk/: __init__.py  prioritizer.py  scorer.py
src/testrunner/storage/: __init__.py  database.py  models.py
tests/: __init__.py  test_config.py  test_database.py  test_executor.py  test_llm_analyzer.py  test_llm_parser.py  test_models.py  test_openrouter.py
tests/fixtures/: go_test_output.txt  jest_output.txt  pytest_output.txt
