[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testrunner"
version = "0.1.0"
description = "LLM-driven CI system that predicts high-risk tests and generates visual reports"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "TestRunner Team"}
]
keywords = ["testing", "ci", "llm", "pytest", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "httpx>=0.25",
    "pydantic>=2.0",
    "gitpython>=3.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
testrunner = "testrunner.cli:main"

[project.urls]
Homepage = "https://github.com/testrunner/testrunner"
Documentation = "https://github.com/testrunner/testrunner#readme"
Repository = "https://github.com/testrunner/testrunner"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
testrunner = ["report/templates/**/*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
